# mpRPC

./: .clang-tidy  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake  NOTICE.txt  Pipfile  README.md  pytest.ini  requirements.txt
bench/: CMakeLists.txt  shared_function_test.cpp
bench/buffer/: CMakeLists.txt  buffer_test.cpp
bench/graph/: CMakeLists.txt  bench_graph.py  echo_graph.py  echo_test.cpp  echo_test.h  echo_test_client.cpp  echo_test_server.cpp
bench/parser/: CMakeLists.txt  common.h  msgpack_test.cpp
bench/rpc/echo/: CMakeLists.txt  common.h  exec_test.cpp  tcp_test.cpp  udp_test.cpp
bench/transport/binary/: CMakeLists.txt  common.h  msgpack_tcp_test.cpp  raw_tcp_test.cpp  raw_udp_test.cpp
bench/utils/: CMakeLists.txt
bench/utils/include/mprpc/: generate_binary.h  generate_binary_data.h  generate_string.h  generate_string_data.h  stop_watch.h
cmake/: CppWarningFlags.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  namespaces.h
doc/sphinx/: CMakeLists.txt  start_auto_build.sh.in
doc/sphinx/src/: .gitignore  acknowledgement.rst  conf.py  index.rst  overview.rst
doc/sphinx/src/Reference/: index.rst
doc/sphinx/src/python-api/: index.rst  mprpc.client.rst  mprpc.config.rst  mprpc.error_code.rst  mprpc.execution.rst  mprpc.logging.rst  mprpc.message.rst  mprpc.mprpc_cpp.rst  mprpc.rst  mprpc.server.rst
example/: CMakeLists.txt
example/echo/: CMakeLists.txt  echo_client.cpp  echo_server.cpp
example/logging/: CMakeLists.txt  write_log.cpp  write_to_stdout.cpp
include/mprpc/: buffer.h  client.h  client_builder.h  client_config.h  client_fwd.h  error_code.h  (+22 more)
python/: .env.in  .pylintrc.in  CMakeLists.txt
python/mprpc/: __init__.py  _error_code.py  _mprpc_cpp.py
python/mprpc/client/: __init__.py  _client.py
python/mprpc/config/: __init__.py
python/mprpc/error_code/: __init__.py
python/mprpc/execution/: __init__.py  _function_method_executor.py  _method_executor.py  _method_server.py  _simple_method_server.py
python/mprpc/logging/: __init__.py  _labeled_logger.py  _log_level_convertion.py  _python_logger.py  log_level_convertion.py  python_logger.py
python/mprpc/message/: __init__.py  _data_validation.py  _message.py  _message_validation.py  _msgid.py  _msgtype.py  _serialization.py  msgtype.py
python/mprpc/mprpc_cpp/: __init__.py
python/mprpc/server/: __init__.py  _server.py
python/mprpc/transport/: __init__.py
python/mprpc_cpp/: CMakeLists.txt
python/mprpc_cpp/include/mprpc/: bind_client.h  bind_config.h  bind_error.h  bind_error_codes.h  bind_logging.h  bind_message.h  bind_server.h  bind_transport.h  format_bytes.h  python_client_helper.h  python_logger_helper.h  python_server_helper.h  repr_from_cpp.h  shared_function_caster.h
python/mprpc_cpp/src/mprpc/: bind.cpp  bind_client.cpp  bind_config.cpp  bind_error.cpp  bind_error_codes.cpp  bind_logging.cpp  bind_message.cpp  bind_server.cpp  bind_transport.cpp  format_bytes.cpp
python/test/: CMakeLists.txt
python/test/mprpc/: callback_test.py  error_code_test.py  error_info_test.py
python/test/mprpc/client/: client_test.py
python/test/mprpc/config/: config_test.py  config_test.toml
python/test/mprpc/execution/: function_method_executor_test.py  simple_method_server_test.py
python/test/mprpc/logging/: labeled_logger_test.py  log_level_convertion_test.py  python_logger_test.py
python/test/mprpc/message/: data_validation_test.py  example_schemas.py  message_data_test.py  message_test.py  messsage_validation_test.py  msgid_test.py  serialization_test.py
python/test/mprpc/server/: python_server_helper_test.py  server_test.py
python/test/mprpc/transport/: address_test.py  session_test.py
python/test/mprpc_cpp_test/: CMakeLists.txt
python/test/mprpc_cpp_test/include/: mock_session.h
python/test/mprpc_cpp_test/src/: bind.cpp
scripts/: collect_gcc_coverage.sh  collect_llvm_coverage.sh  collect_test_results.sh
src/: format_message.cpp  shared_binary.cpp  thread_pool.cpp
test/: CMakeLists.txt
test/integration/: CMakeLists.txt
test/integration/config/: CMakeLists.txt  config_test.cpp  mprpc_test_integ_config.toml
test/integration/logging/: CMakeLists.txt
test/integration/logging/write_log_test/: CMakeLists.txt  conftest.py  write_log.cpp  write_log_test.py
test/integration/tcp/: CMakeLists.txt  tcp_test.cpp
test/integration/tcp_udp/: CMakeLists.txt  tcp_udp_test.cpp
test/integration/udp/: CMakeLists.txt  udp_test.cpp
test/integration/zstd/: CMakeLists.txt  zstd_test.cpp
test/units/: CMakeLists.txt  allocator_traits_test.cpp  buffer_test.cpp  client_builder_test.cpp  client_test.cpp  create_logger.cpp  create_logger.h  error_info_test.cpp  exception_test.cpp  format_message_test.cpp  message_data_test.cpp  message_test.cpp  method_client_test.cpp  pack_data_test.cpp  position_macros_test.cpp  require_nonull_test.cpp  response_future_test.cpp  server_builder_test.cpp  server_test.cpp  shared_binary_test.cpp  shared_function_test.cpp  thread_pool_test.cpp  typed_response_future_test.cpp
test/units/config/: load_test.cpp  option_test.cpp  toml_helper_test.cpp
test/units/execution/: function_method_executor_test.cpp  simple_method_server_test.cpp
test/units/impl/: safe_double_size_test.cpp
test/units/logging/: format_log_data_test.cpp  labeled_logger_test.cpp  log_data_traits_test.cpp  logger_test.cpp  logging_macros_test.cpp  spdlog_logger_test.cpp
test/units/transport/asio_helper/: basic_endpoint_test.cpp
test/units/transport/compressors/: zstd_non_streaming_test.cpp  zstd_streaming_test.cpp
test/units/transport/mock/: mock_acceptor_test.cpp  mock_address_test.cpp  mock_connector_test.cpp  mock_session_test.cpp
test/units/transport/msgpack/: msgpack_parser_test.cpp
test/units/transport/parsers/: msgpack_parser_test.cpp
test/units/transport/tcp/: tcp_address_test.cpp  tcp_test.cpp
test/units/transport/udp/: udp_address_test.cpp  udp_test.cpp
test/utils/: CMakeLists.txt
test/utils/include/mprpc/transport/mock/: mock_acceptor.h  mock_address.h  mock_connector.h  mock_session.h
(+87 files in other folders)
