add_executable(
    mprpc_test_units
    logging/log_data_traits_test.cpp
    logging/format_log_data_test.cpp
    logging/logger_test.cpp
    logging/logging_macros_test.cpp
    logging/spdlog_logger_test.cpp
    create_logger.cpp
    message_data_test.cpp
    error_info_test.cpp
    exception_test.cpp
    format_message_test.cpp
    thread_pool_test.cpp
    transport/mock/mock_session_test.cpp
    transport/mock/mock_acceptor_test.cpp
    transport/mock/mock_connector_test.cpp
    transport/mock/mock_address_test.cpp
    transport/msgpack/msgpack_parser_test.cpp)
target_add_catch2(mprpc_test_units)
